--- a/17-PROYECTO-Buscador/index.html
+++ b/17-PROYECTO-Buscador/index.html
@@ -105,7 +105,9 @@
     <a class="sitio-web" href="https://www.codigoconjuan.com" rel="nofollow noopener noreferrer" >Código Con Juan</a>
 
     <script src="js/db.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>     
+    <!-- <script src="js/scriptHarold-17-Proyecto.js"></script> -->
+
     
 </body>
 </html>
