--- a/19-PROYECTO-LocalStorage/index.html
+++ b/19-PROYECTO-LocalStorage/index.html
@@ -33,6 +33,7 @@
         </div>
     </div> <!--#contenido-->
 
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>       
+    <!-- <script src="js/scriptHarold-19.js"></script> -->
 </body>
 </html>
