--- a/20-PROYECTO-Carrito-LS/index.html
+++ b/20-PROYECTO-Carrito-LS/index.html
@@ -262,7 +262,8 @@
         </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>           
+    <!-- <script src="js/scriptHarold-20.js"></script>  -->
 
 </body>
 </html>
