--- a/23-PROYECTO-Prototypes-Seguro/index.html
+++ b/23-PROYECTO-Prototypes-Seguro/index.html
@@ -73,6 +73,7 @@
       </div> <!--#contenido-->
 </div>
 
-  <script src="js/app.js"></script>
+  <!-- <script src="js/app.js"></script> -->
+  <script src="js/scriptHarold-23.js"></script> 
   </body>
 </html>
