--- a/25-PROYECTO-GastoSemanal/index.html
+++ b/25-PROYECTO-GastoSemanal/index.html
@@ -59,7 +59,7 @@
     </div>
 
 
-    <script src="js/app.js"></script>   
-    <!-- <script src="js/scriptHarold-25.js"></script> -->
+    <!-- <script src="js/app.js"></script>    -->
+    <script src="js/scriptHarold-25.js"></script>
   </body>
 </html>
