--- a/25-PROYECTO-GastoSemanal/index.html
+++ b/25-PROYECTO-GastoSemanal/index.html
@@ -60,6 +60,7 @@
 
 
     <!-- <script src="js/app.js"></script>    -->
-    <script src="js/scriptHarold-25.js"></script>
+    <!-- <script src="js/scriptHarold-25.js"></script>    -->
+    <script src="js/scriptJuankar.js"></script>
   </body>
 </html>
