35-FETCH Hasta el 03

--- a/35-FetchAPI/index.html
+++ b/35-FetchAPI/index.html
@@ -29,6 +29,9 @@
         <button type="button" id="cargarAPI">
             Cargar API
         </button>
+        <button type="button" id="reiniciar">
+            Volver
+        </button>
     </div>
 
     <script src="js/01-app.js"></script> 
